feat: qiankun slave app

--- a/src/global.less
+++ b/src/global.less
@@ -9,26 +9,10 @@ body,
     'Noto Color Emoji';
 }
 
-.keep-alive-tabs {
-  .ant-tabs-nav {
-    margin: 0;
-  }
-}
-
-.ant-pro .ant-pro-layout .ant-pro-layout-content {
-  padding: 0;
-}
-
-.colorWeak {
-  filter: invert(80%);
-}
-
-.ant-layout {
-  min-height: 100vh;
-}
-.ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
-  left: unset;
-}
+// 色弱模式
+// .colorWeak {
+//   filter: invert(80%);
+// }
 
 canvas {
   display: block;
